<resources>
    <string name="app_name">Traveler App</string>
    <string name="name">Name</string>
    <string name="name2">Name</string>
    <string name="email">email</string>
    <string name="Email">Email</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name23">Name</string>
    <string name="login">LOGIN</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="todo2">TODO</string>
    <string name="name4">Name</string>
    <string name="password">Password</string>
    <string name="email2">Email</string>
    <string name="username">Username</string>
</resources>