<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".New.UserSignUp"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/signup_ico" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="278dp"
        android:layout_height="359dp"
        android:innerRadius="0dp"
        android:orientation="horizontal"
        android:shape="ring"
        app:cardBackgroundColor="@color/light_bluew"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="263dp"
            android:layout_height="339dp"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name4"
                android:inputType="textPersonName"
                tools:ignore="DuplicateClickableBoundsCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="235dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#78909C" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email2"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="239dp"
                android:layout_height="61dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#78909C"
                tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck"
                android:autofillHints="" />

            <EditText
                android:id="@+id/txt_conf_password"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#78909C" />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="236dp"
                android:layout_height="wrap_content"
                android:text="Sign up" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>